# valkyrie-std

./: Cargo.toml
.run/: Build Lexer.run.xml
projects/valkyrie-ast/: Cargo.toml
projects/valkyrie-ast/src/: display.rs  lib.rs
projects/valkyrie-ast/tests/: main.rs
projects/valkyrie-errors/: Cargo.toml
projects/valkyrie-errors/src/: lib.rs
projects/valkyrie-errors/src/duplicates/: mod.rs
projects/valkyrie-errors/src/errors/: display.rs  mod.rs
projects/valkyrie-errors/src/errors/diagnostic/: mod.rs
projects/valkyrie-errors/src/managers/: mod.rs
projects/valkyrie-errors/src/managers/list/: mod.rs
projects/valkyrie-errors/src/parsing/: for_peginator.rs  mod.rs
projects/valkyrie-errors/src/runtime/: mod.rs
projects/valkyrie-errors/tests/: main.rs
projects/valkyrie-nlp/: Cargo.toml
projects/valkyrie-nlp/src/: lib.rs
projects/valkyrie-parser/: Cargo.toml  valkyrie.peg
projects/valkyrie-parser/src/parser/: mod.rs  valkyrie.rs
projects/valkyrie-parser/src/parser/expression/: mod.rs  number.rs
projects/valkyrie-parser/tests/: basic.vk  main.rs
projects/valkyrie-parser/tests/test_literal/: atomic.vk  mod.rs  numbers.vk  table.vk  test_number.rs  test_string.rs  test_symbol.rs  test_table.rs  tuple.vk
projects/valkyrie-std/: Cargo.toml  Legion.json5
projects/valkyrie-std-io/: Cargo.toml
projects/valkyrie-std-io/src/: lib.rs
projects/valkyrie-std-tensor/: Cargo.toml
projects/valkyrie-std-tensor/src/parser/: valkyrie.rs
projects/valkyrie-std-units/: Cargo.toml
projects/valkyrie-types/: Cargo.toml  desuger.md
(+231 files in other folders)
