[package]
name = "valkyrie-errors"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Error types for valkyrie language"
repository = "https://github.com/nyar-vm/valkyrie-std"
documentation = "https://docs.rs/valkyrie-errors"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
num = "0.4.0"
indexmap = "1.9.2"
inwelling = "0.3.0"
itertools = "0.10.5"
miette = { version = "5.5.0", features = ["fancy"] }


[dev-dependencies]

[features]
default = []
